appId: tech.jala.android.lite
name: AT26-27
tags: 
  - AT26-27
---
- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    waitToSettleTimeoutMs: 5000 
    label: "klik kolam" 
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1"  ## klik kolam A1##
- swipe:
    direction: LEFT ## menuju pakan ##
- tapOn:
    point: 311, 1155
    label: "klik kolam CATATAN"
- tapOn: "Tidak"
- tapOn:
    point: 296, 992 ## klik jumlah pakan#
    label: "klik JUMLAH PAKAN" 
- inputText: "5,5"
- hideKeyboard
- tapOn: 
    point: 306, 967 ## klik opsional catatan##
    label: "klik CATATAN" 
- inputText: "Test Automation"

- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000
- stopApp

- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 
- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    label: "klik KOLAM" 
    waitToSettleTimeoutMs: 5000
    delay: 5000

- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1"  ## klik kolam A1##
- swipe:
    direction: LEFT


## klik edit##
- tapOn: 
    point: 555, 343
    label: "klik EDIT" 

- assertVisible: "5,5"

- tapOn: "Pilih Stok"
- tapOn: "Pakan Bintang 584 (kg)"
- tapOn: 
    point: 296, 992
    label: "klik jumlah pakan" 
- eraseText
- inputText: "2,5"
- hideKeyboard
- tapOn:
    point: 306, 967
    label: "klik catatan" 
- eraseText
- inputText: "Edit jumlah pakan"

- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000
- stopApp





