appId: tech.jala.android.lite
name: AT35-37
tags:
  - AT35-37
---
- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

#pilih field Automation Flutter
- tapOn:
    point: 150,220

- tapOn:
    text: "Automation Flutter"

- assertVisible:
    text: "Kolam"

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000

#pilih menu kolam
- tapOn:
    point: 235, 681

- tapOn:
    text: "Kolam"
    repeat: 3
    delay: 5000
    
 #tap A1
- tapOn:
    point: 57, 375
    
#tap sampling
- tapOn:
    point: 435, 155

- swipe:              
    direction: LEFT
    
- tapOn: 
    text: "Catatan"
    
- tapOn: 
    text: "Perlakuan"
    index: 2
- inputText:
    text: "Saprotam 2,5kg"
    label: "Ketik Saprotam 2,5kg"

- hideKeyboard

- tapOn: 
    text: "Catatan"
- inputText:
    text: "test pemberian Perlakuan"
    label: " Ketik test pemberian perlakuan"

- hideKeyboard

- tapOn: "Simpan"

  #Pilih icon [edit] pada data current date
- tapOn:
    point: 563,349

#assert data#
- assertVisible: "Saprotam 2,5kg"
- assertVisible: "Test pemberian perlakuan" # or any other selecto
  
- tapOn: 
    text: "Saprotam 2,5kg"

- eraseText 

- inputText:
    text: "Kapur Tohor 100gr"
    label: "Ketik Kapur Tohor 100gr"

- hideKeyboard

- tapOn: 
    text: "test pemberian Perlakuan"

- eraseText 

- inputText:
    text: "ubah pemberian Perlakuan"
    label: "ubah pemberian perlakuan"

- hideKeyboard

- tapOn: "Simpan"

# Tap icon edit
- tapOn:
    point: 563,349

#assert data#
- assertVisible: "Kapur Tohor 100gr"
- assertVisible: "ubah pemberian perlakuan"

- tapOn:
    text: "Hapus"

- tapOn: "Ya, Saya Yakin"

# Assert bahwa data perlakuan telah berhasil di delete
- assertVisible: "Belum ada data tersimpan"





  
