appId: tech.jala.android.lite
name: AT41-43
tags: 
  - AT41-43
---
- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    label: "klik kolam" 
    waitToSettleTimeoutMs: 5000 
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1" ## klik kolam A1##

- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT ## klik kematian ##
- tapOn:
    point: 311, 1155 ## catatan##
    label: "klik +Catatan" 
- scrollUntilVisible:
    element:
      text: "Catatan (Opsional)"
- tapOn: 
    text: "Catatan"
    label: "tap Catatan"
- inputText: "Test Automation"
- hideKeyboard
- tapOn: "Contoh: 1,5"
- inputText: "2"
- tapOn:
    text: "0"
    index: 1
- inputText: "1000" 
- tapOn: 
    text: "0"
    index: 0
- inputText: "10"
- tapOn: 
    text: "Simpan" ## klik simpan##
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000 
- stopApp

- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    label: "klik kolam" 
    waitToSettleTimeoutMs: 5000 
    
- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: "klik kolam A1"  ## klik kolam A1##

- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT ## klik kematian ##

- tapOn: 
    point: 551, 340 ## edit ##
    label: "klik edit" 

## assert data ##
- assertVisible: "10.00"
- assertVisible: "1000.00"
- assertVisible: "2" ## fitur pengali masih error##
- tapOn: "Size"
- tapOn: 
    point: 293, 1030
    label: "klik Total Berat" 
- eraseText
- inputText: "3"
- tapOn: 
    point: 311, 518
    label: "klik Jumlah Ekor" 
- eraseText
- inputText: "95"
- tapOn: 
    point: 309, 399
    label: "klik pengali" 
- eraseText
- inputText: "2"
- tapOn: 
    text: "Simpan" ## klik simpan###
    waitToSettleTimeoutMs: 7000
    delay: 10000
- extendedWaitUntil:
    notVisible: 
        text: "Simpan" # or any other selector
    timeout: 10000 
- stopApp

- clearState
- launchApp

- runFlow: login_email_budidaya.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    text: "Delay (Ignore This)"
    optional: true
    repeat: 3
    delay: 5000
- tapOn:
    point: 235, 681 ## skip pick kolam ##
    waitToSettleTimeoutMs: 5000 
    label: "klik kolam" 

- waitForAnimationToEnd:
    timeout: 5000
 ## pick kolam ##
- tapOn: 
    text: "Kolam"
    repeat: 3
    delay: 5000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: 62, 376
    label: klik kolam   ## klik kolam A1##
    label: "klik kolam A1" 

- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT
- swipe:
    direction: LEFT ## klik kematian ##

- tapOn: 
    point: 551, 340 ## edit ##
    label: "klik edit" 
- tapOn: "Hapus"
- tapOn: "Ya, Saya Yakin"
- extendedWaitUntil:
    visible: "Belum ada data tersimpan"
    timeout: 10000 ##10 det##
- assertVisible: 
    text: "Belum ada data tersimpan"
